testcases/phase1/check06mbaw-Everything.rc


/*****  return void *******/
function: void boo() {
  // ok
  return;
}

function: void coo() {
  // ok 
}

function: void doo() {
  // error
  return 1;	
}

function: void foo() {
  // error

  // declaring b
  int b, c = 0;

  // error
  int a, d=0; 
  return b;
}

function: void goo() {
	// error
  float b;
  return b;
}

function: void noo() {
	// error
  bool b;
  return b;
}


/***** return void (func has paramter) **********/
function: void hoo(int a) {
// ok 
  return;	
}

function: void joo(int a) {
	// ok 
}

function: void koo(int a) {
	// error
  return 1;
}

function: void loo(int a) {
	// error
  return a;
}

function: void moo(int a) {
	// error
  int b;
  return b;
}

function: void qoo(int a) {
	// error
  float b;
  return b;
}

function: void roo(int a) {
	// error
  bool b;
  return b;
}


/*** return int ****/
function: int bar() {
}

function: int dar() {
  // ok
  return 3;
}

function: int far() {
  // ok
  int a;
  return a;
}

function: int gar() {
	// error
  float b;
  return b;
}
	
function: int har() {
	// error
  bool b;
  return b;
}

/***** return int (func has parameter) **********/

function: int jar(int i) {
  // error
}

function: int lar(int i) {
	// ok
  return 3;
}

function: int lar2(int i) {
	// error 
  return 3.0;
}

function: int mar(int i) {
	// ok
  return i;
}

function: int nar(int i) {
	// ok
  int a;
  return a;
}

function: int par(int i) {
	// error  
  float b;
  return b;
}
	
function: int qar(int i) {
	// error  
  bool b;
  return b;
}


/***** return float ******/

function: float bur() {
  // error
}

function: float dur() {
	// ok
  return 3;
}

function: float dur2() {
 // ok
  return 3.0;  
}		

function: float fur() {
	// ok
  float a;
  return a;
}

function: float gur() {
	// ok  
  int b;
  return b;
}
	
function: float hur() {
	// error  
  bool b;
  return b;
}

/***** return float (func has parameter) **********/

function: float kur(float i) {
  // error
}

function: float lur(float i) {
	// ok
  return 3;
}

function: float mur(float i) {
	// ok
  return i;
}

function: float nur(float i) {
	// ok
  float a;
  return a;
}

function: float pur(float i) {
	// ok
  int b;
  return b;
}
	
function: float qur(float i) {
	// error  
  bool b;
  return b;
}

function: float qur(int i) {
	// ok  
  return i;
}

/***** return bool  ******/
function: bool bir() {
  // error
}

function: bool dir() {
	// error
  return 3;
}

function: bool fir() {
	// ok
  bool a;
  return a;
}

function: bool gir() {
	// error  
  int b;
  return b;
}
	
function: bool hir() {
	// error  
  float b;
  return b;
}

/***** return  bool (func has parameter) **********/

function: bool kir(float i) {
  // error
}

function: bool lir(bool i) {
	// ok
  return i;
}

function: bool mir(float i) {
	// error 
  return i;
}

function: bool nir(float i) {
	// ok
  bool a;
  return a;
}

function: bool pir(float i) {
	// error  
  int b;
  return b;
}
	
function: bool qir(float i) {
	// error  
  float b;
  return b;
}




